other/verify-image-slsa/.chainsaw-test/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
    - name: test-container
      image: 'myreg.org/path/repo:v1'
      imagePullPolicy: Always
