other/verify-image-slsa/.chainsaw-test/good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
    - name: test-container
      image: 'nginx:latest'
      imagePullPolicy: Always
