other/verify-image-slsa/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-slsa-provenance-keyless
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
